Избавился от зависимости репозитория touchinstinct-a

--- a/tools/static-analysis/gradle/commonHttpStaticAnalysis.gradle
+++ b/tools/static-analysis/gradle/commonHttpStaticAnalysis.gradle
@@ -17,9 +17,6 @@ def appendLintErrors
 
 def normalizeFileUrl
 
-repositories {
-    maven { url "http://dl.bintray.com/touchin/touchin-tools" }
-}
 configurations {
     pngtastic
     detekt
@@ -328,7 +325,7 @@ getPmdTask = { sources ->
     def taskName = "pmd_${project.name}"
     tasks.create(taskName, Pmd) {
         pmdClasspath = configurations.pmd.asFileTree
-        ruleSetFiles = files("${rootDir}/tools/static-analysis/pmd/rulesets/java/android.xml")
+        ruleSetFiles = files("${rootDir}/android-style-guide/android-style-guide/tools/static-analysis/pmd/rulesets/java/android.xml")
         ruleSets = []
         source files(sources)
         ignoreFailures = true
@@ -368,7 +365,7 @@ getLintTasks = {
     android.lintOptions.xmlOutput = file("${project.buildDir}/reports/lint_report.xml")
     android.lintOptions.htmlReport = true
     android.lintOptions.htmlOutput = file("${project.buildDir}/reports/lint_report.html")
-    android.lintOptions.lintConfig = file("${rootDir}/tools/static-analysis/lint/lint.xml")
+    android.lintOptions.lintConfig = file("${rootDir}/android-style-guide/android-style-guide/tools/static-analysis/lint/lint.xml")
     return lintTaskNames
 }
 
@@ -381,7 +378,7 @@ getCheckstyleTask = { sources ->
         ignoreFailures = true
         showViolations = false
         source files(sources)
-        configFile file("${rootDir}/tools/static-analysis/checkstyle/configuration/touchin_checkstyle.xml")
+        configFile file("${rootDir}/android-style-guide/android-style-guide/tools/static-analysis/checkstyle/configuration/touchin_checkstyle.xml")
         checkstyleClasspath = configurations.checkstyle.asFileTree
         classpath = files(System.getenv("ANDROID_HOME") + "/platforms/" + android.compileSdkVersion + "/android.jar") +
                 files(System.properties.'java.home' + "/lib/rt.jar") +
@@ -404,7 +401,7 @@ getKotlinDetektTask = { isAndroidProject ->
         def input = "${rootDir}"
         def output = "${project.buildDir}/reports"
         def outputName = "kotlin-detekt"
-        def config = "${rootDir}/tools/static-analysis/kotlin/detekt-config.yml"
+        def config = "${rootDir}/android-style-guide/android-style-guide/tools/static-analysis/kotlin/detekt-config.yml"
 
         // TODO add excludes from rootProject.extensions.findByName("staticAnalysisExcludes")
         def filters = ".*src/test.*,.*/resources/.*,.*/tmp/.*"
@@ -422,7 +419,7 @@ dependencies {
     pmd 'net.sourceforge.pmd:pmd-core:5.5.3'
     pmd 'net.sourceforge.pmd:pmd-java:5.5.3'
 
-    checkstyle 'ru.touchin:checkstyle:7.6.2-fork'
+    checkstyle fileTree(dir: 'libs', include: ['*.jar'])
 
     cpd 'de.aaschmid:gradle-cpd-plugin:1.0'
 
