--- a/tools/static-analysis/gradle/staticAnalysis.gradle
+++ b/tools/static-analysis/gradle/staticAnalysis.gradle
@@ -1,8 +1,8 @@
 def getServerProjectSources
 def getAndroidProjectSources
 
-apply from: "${rootDir}/tools/static-analysis/gradle/commonHttpStaticAnalysis.gradle"
-apply from: "${rootDir}/tools/static-analysis/gradle/commonConsoleStaticAnalysis.gradle"
+apply from: "${rootDir}/android-style-guide/tools/static-analysis/gradle/commonHttpStaticAnalysis.gradle"
+apply from: "${rootDir}/android-style-guide/tools/static-analysis/gradle/commonConsoleStaticAnalysis.gradle"
 
 gradle.projectsEvaluated {
 
@@ -55,7 +55,7 @@ gradle.projectsEvaluated {
         dependsOn serverIdeaFormatTask
         dependsOn serverStaticAnalysisTasks
         doFirst {
-            generateReport(false)
+            generateHtmlReport(false)
         }
     }
 
@@ -64,7 +64,7 @@ gradle.projectsEvaluated {
 
         dependsOn serverStaticAnalysisTasks
         doFirst {
-            generateReport(false)
+            generateHtmlReport(false)
         }
     }
 }
