--- a/tools/static-analysis/gradle/commonConsoleStaticAnalysis.gradle
+++ b/tools/static-analysis/gradle/commonConsoleStaticAnalysis.gradle
@@ -16,7 +16,6 @@ def appendPmdErrors
 def appendLintErrors
 
 repositories {
-    maven { url "http://dl.bintray.com/touchin/touchin-tools" }
     jcenter()
 }
 
@@ -257,7 +256,7 @@ getPmdTask = { sources ->
     def taskName = "pmd_${project.name}"
     tasks.create(taskName, Pmd) {
         pmdClasspath = configurations.pmd.asFileTree
-        ruleSetFiles = files("${rootDir}/tools/static-analysis/pmd/rulesets/java/android.xml")
+        ruleSetFiles = files("${rootDir}/android-style-guide/tools/static-analysis/pmd/rulesets/java/android.xml")
         ruleSets = []
         source files(sources)
         ignoreFailures = true
@@ -296,7 +295,7 @@ getLintTasks = {
     android.lintOptions.xmlReport = true
     android.lintOptions.xmlOutput = file("${project.buildDir}/reports/lint_report.xml")
     android.lintOptions.htmlReport = false
-    android.lintOptions.lintConfig = file("${rootDir}/tools/static-analysis/lint/lint.xml")
+    android.lintOptions.lintConfig = file("${rootDir}/android-style-guide/tools/static-analysis/lint/lint.xml")
     return lintTaskNames
 }
 
@@ -309,7 +308,7 @@ getCheckstyleTask = { sources ->
         ignoreFailures = true
         showViolations = false
         source files(sources)
-        configFile file("${rootDir}/tools/static-analysis/checkstyle/configuration/touchin_checkstyle.xml")
+        configFile file("${rootDir}/android-style-guide/tools/static-analysis/checkstyle/configuration/touchin_checkstyle.xml")
         checkstyleClasspath = configurations.checkstyle.asFileTree
         classpath = files(System.getenv("ANDROID_HOME") + "/platforms/" + android.compileSdkVersion + "/android.jar") +
                 files(System.properties.'java.home' + "/lib/rt.jar") +
@@ -332,7 +331,7 @@ getKotlinDetektTask = { isAndroidProject ->
         def input = "${rootDir}"
         def output = "${project.buildDir}/reports"
         def outputName = "kotlin-detekt"
-        def config = "${rootDir}/tools/static-analysis/kotlin/detekt-config.yml"
+        def config = "${rootDir}/android-style-guide/tools/static-analysis/kotlin/detekt-config.yml"
 
         // TODO add excludes from rootProject.extensions.findByName("staticAnalysisExcludes")
         def filters = ".*src/test.*,.*/resources/.*,.*/tmp/.*"
@@ -350,7 +349,9 @@ dependencies {
     pmd 'net.sourceforge.pmd:pmd-core:5.5.3'
     pmd 'net.sourceforge.pmd:pmd-java:5.5.3'
 
-    checkstyle 'ru.touchin:checkstyle:7.6.2-fork'
+    checkstyle fileTree(dir: 'libs', include: ['*.jar'])
 
-    detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.0.0.RC6-2'
+    cpd 'de.aaschmid:gradle-cpd-plugin:1.0'
+
+    detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.0.0.RC7'
 }
