--- a/tools/static-analysis/kotlin/detekt-config.yml
+++ b/tools/static-analysis/kotlin/detekt-config.yml
@@ -1,14 +1,31 @@
 autoCorrect: true
 failFast: false
 
+test-pattern: # Configure exclusions for test sources
+  active: true
+  patterns: # Test file regexes
+    - '.*/test/.*'
+    - '.*Test.kt'
+    - '.*Spec.kt'
+  exclude-rule-sets:
+    - 'comments'
+  exclude-rules:
+    - 'NamingRules'
+    - 'WildcardImport'
+    - 'MagicNumber'
+    - 'MaxLineLength'
+    - 'LateinitUsage'
+    - 'StringLiteralDuplication'
+    - 'SpreadOperator'
+    - 'TooManyFunctions'
+
 build:
-  warningThreshold: 1
-  failThreshold: 100500
+  maxIssues: 100500
   weights:
     complexity: 2
-    formatting: 0
     LongParameterList: 1
-    comments: 0.5
+    style: 1
+    comments: 1
 
 processors:
   active: true
@@ -31,15 +48,16 @@ console-reports:
 output-reports:
   active: true
   exclude:
-  - 'PlainOutputReport'
-  - 'HtmlOutputReport'
+  #  - 'HtmlOutputReport'
+  #  - 'PlainOutputReport'
+  #  - 'XmlOutputReport'
 
 comments:
-  active: false
+  active: true
   CommentOverPrivateFunction:
-    active: false
+    active: true
   CommentOverPrivateProperty:
-    active: false
+    active: true
   EndOfSentenceFormat:
     active: false
     endOfSentenceFormat: ([.?!][ \t\n\r\f<])|([.?!]$)
@@ -56,7 +74,7 @@ complexity:
   active: true
   ComplexCondition:
     active: true
-    threshold: 5
+    threshold: 3
   ComplexInterface:
     active: false
     threshold: 10
@@ -64,46 +82,49 @@ complexity:
   ComplexMethod:
     active: true
     threshold: 10
+    ignoreSingleWhenExpression: false
   LabeledExpression:
     active: true
   LargeClass:
     active: true
-    threshold: 800
+    threshold: 150
   LongMethod:
     active: true
-    threshold: 40
+    threshold: 20
   LongParameterList:
     active: true
-    threshold: 10
+    threshold: 5
     ignoreDefaultParameters: false
   MethodOverloading:
     active: false
-    threshold: 5
+    threshold: 6
   NestedBlockDepth:
     active: true
-    threshold: 3
+    threshold: 4
   StringLiteralDuplication:
     active: true
-    threshold: 3
+    threshold: 2
     ignoreAnnotation: true
-    excludeStringsWithLessThan5Characters: true
+    excludeStringsWithLessThan5Characters: false
     ignoreStringsRegex: '$^'
   TooManyFunctions:
     active: true
-    thresholdInFiles: 20
-    thresholdInClasses: 20
-    thresholdInInterfaces: 20
-    thresholdInObjects: 20
-    thresholdInEnums: 20
+    thresholdInFiles: 10
+    thresholdInClasses: 10
+    thresholdInInterfaces: 10
+    thresholdInObjects: 10
+    thresholdInEnums: 10
+    ignoreDeprecated: false
 
 empty-blocks:
   active: true
   EmptyCatchBlock:
     active: true
+    allowedExceptionNameRegex: "^(_|(ignore|expected).*)"
   EmptyClassBlock:
     active: true
   EmptyDefaultConstructor:
-    active: false
+    active: true
   EmptyDoWhileBlock:
     active: true
   EmptyElseBlock:
@@ -114,6 +135,7 @@ empty-blocks:
     active: true
   EmptyFunctionBlock:
     active: true
+    ignoreOverriddenFunctions: false
   EmptyIfBlock:
     active: true
   EmptyInitBlock:
@@ -133,54 +155,139 @@ exceptions:
     active: true
     methodNames: 'toString,hashCode,equals,finalize'
   InstanceOfCheckForException:
-    active: false
+    active: true
   NotImplementedDeclaration:
-    active: true
+    active: false
   PrintStackTrace:
-    active: true
+    active: false
   RethrowCaughtException:
     active: false
   ReturnFromFinally:
     active: false
   SwallowedException:
-    active: false
+    active: true
   ThrowingExceptionFromFinally:
-    active: false
+    active: true
   ThrowingExceptionInMain:
     active: false
   ThrowingExceptionsWithoutMessageOrCause:
     active: true
     exceptions: 'IllegalArgumentException,IllegalStateException,IOException'
   ThrowingNewInstanceOfSameException:
-    active: false
+    active: true
   TooGenericExceptionCaught:
     active: true
-    exceptions:
-     - ArrayIndexOutOfBoundsException
+    exceptionNames:
      - Error
      - Exception
-     - IllegalMonitorStateException
-     - NullPointerException
-     - IndexOutOfBoundsException
      - RuntimeException
      - Throwable
   TooGenericExceptionThrown:
     active: true
-    exceptions:
+    exceptionNames:
      - Error
      - Exception
-     - NullPointerException
      - Throwable
      - RuntimeException
+
+formatting:
+  active: true
+  android: true
+  autoCorrect: true
+  ChainWrapping:
+    active: true
+    autoCorrect: true
+  CommentSpacing:
+    active: true
+    autoCorrect: true
+  Filename:
+    active: true
+  FinalNewline:
+    active: true
+    autoCorrect: true
+  ImportOrdering:
+    active: true
+    autoCorrect: true
+  Indentation:
+    active: false
+    autoCorrect: true
+    indentSize: 4
+    continuationIndentSize: 4
+  MaximumLineLength:
+    active: false
+    maxLineLength: 120
+  ModifierOrdering:
+    active: true
+    autoCorrect: true
+  NoBlankLineBeforeRbrace:
+    active: true
+    autoCorrect: true
+  NoConsecutiveBlankLines:
+    active: true
+    autoCorrect: true
+  NoEmptyClassBody:
+    active: true
+    autoCorrect: true
+  NoItParamInMultilineLambda:
+    active: true
+  NoLineBreakAfterElse:
+    active: true
+    autoCorrect: true
+  NoLineBreakBeforeAssignment:
+    active: true
+    autoCorrect: true
+  NoMultipleSpaces:
+    active: true
+    autoCorrect: true
+  NoSemicolons:
+    active: true
+    autoCorrect: true
+  NoTrailingSpaces:
+    active: true
+    autoCorrect: true
+  NoUnitReturn:
+    active: true
+    autoCorrect: true
+  NoUnusedImports:
+    active: true
+    autoCorrect: true
+  NoWildcardImports:
+    active: true
+    autoCorrect: true
+  ParameterListWrapping:
+    active: true
+    autoCorrect: true
+    indentSize: 4
+  SpacingAroundColon:
+    active: true
+    autoCorrect: true
+  SpacingAroundComma:
+    active: true
+    autoCorrect: true
+  SpacingAroundCurly:
+    active: true
+    autoCorrect: true
+  SpacingAroundKeyword:
+    active: true
+    autoCorrect: true
+  SpacingAroundOperators:
+    active: true
+    autoCorrect: true
+  SpacingAroundRangeOperator:
+    active: true
+    autoCorrect: true
+  StringTemplate:
+    active: true
+    autoCorrect: true
 
 naming:
   active: true
   ClassNaming:
     active: true
-    classPattern: '^[A-Z][a-zA-Z0-9]*$'
+    classPattern: '[A-Z$][a-zA-Z0-9$]*'
   EnumNaming:
     active: true
-    enumEntryPattern: '^[A-Z][a-zA-Z0-9_]*$'
+    enumEntryPattern: '^[A-Z][_a-zA-Z0-9]*'
   ForbiddenClassName:
     active: false
     forbiddenName: ''
@@ -192,23 +299,25 @@ naming:
     minimumFunctionNameLength: 3
   FunctionNaming:
     active: true
-    functionPattern: '^[a-z][a-z0-9][a-zA-Z0-9_]*$'
+    functionPattern: '^([a-z$][a-zA-Z$0-9]*)|(`.*`)$'
+    excludeClassPattern: '$^'
   MatchingDeclarationName:
     active: true
   MemberNameEqualsClassName:
-    active: false
+    active: true
     ignoreOverriddenFunction: true
   ObjectPropertyNaming:
     active: true
     propertyPattern: '[A-Za-z][_A-Za-z0-9]*'
+    constantPattern: '[A-Za-z][_A-Za-z0-9]*'
   PackageNaming:
     active: true
-    packagePattern: '^[a-z]+(\.[a-z][a-z0-9]*)*$'
+    packagePattern: '^[a-z]+(\.[_a-z][_a-z0-9]*)*$'
   TopLevelPropertyNaming:
     active: true
-    constantPattern: '^[A-Z][A-Z0-9]*(_[A-Z0-9]+)*$'
-    propertyPattern: '^[a-z][a-z0-9][a-zA-Z0-9]*$'
-    privatePropertyPattern: '^[a-z][a-z0-9][a-zA-Z0-9]*$'
+    constantPattern: '[A-Z][_A-Z0-9]*'
+    propertyPattern: '[A-Za-z][_A-Za-z0-9]*'
+    privatePropertyPattern: '(_)?[A-Za-z][A-Za-z0-9]*'
   VariableMaxLength:
     active: false
     maximumVariableNameLength: 64
@@ -217,15 +326,16 @@ naming:
     minimumVariableNameLength: 1
   VariableNaming:
     active: true
-    variablePattern: '^[a-z][a-z0-9][a-zA-Z0-9]*$'
-    privateVariablePattern: '^[a-z][a-z0-9][a-zA-Z0-9]*$'
+    variablePattern: '[a-z][A-Za-z0-9]*'
+    privateVariablePattern: '(_)?[a-z][A-Za-z0-9]*'
+    excludeClassPattern: '$^'
 
 performance:
   active: true
   ForEachOnRange:
     active: true
   SpreadOperator:
-    active: true
+    active: false
   UnnecessaryTemporaryInstantiation:
     active: true
 
@@ -240,7 +350,7 @@ potential-bugs:
   ExplicitGarbageCollectionCall:
     active: true
   InvalidRange:
-    active: true
+    active: false
   IteratorHasNextCallsNextMethod:
     active: false
   IteratorNotThrowingNoSuchElementException:
@@ -265,73 +375,78 @@ potential-bugs:
 style:
   active: true
   CollapsibleIfStatements:
-    active: false
+    active: true
   DataClassContainsFunctions:
-    active: false
+    active: true
     conversionFunctionPrefix: 'to'
   EqualsNullCall:
-    active: false
+    active: true
   ExpressionBodySyntax:
     active: true
   ForbiddenComment:
     active: true
-    values: 'STOPSHIP:'
+    values: 'TODO:,FIXME:,STOPSHIP:'
   ForbiddenImport:
     active: false
     imports: ''
   FunctionOnlyReturningConstant:
-    active: false
+    active: true
     ignoreOverridableFunction: true
     excludedFunctions: 'describeContents'
   LoopWithTooManyJumpStatements:
-    active: false
+    active: true
     maxJumpCount: 1
   MagicNumber:
-    active: false
+    active: true
     ignoreNumbers: '-1,0,1,2'
     ignoreHashCodeFunction: false
-    ignorePropertyDeclaration: true
+    ignorePropertyDeclaration: false
     ignoreConstantDeclaration: true
     ignoreCompanionObjectPropertyDeclaration: true
-    ignoreAnnotation: true
+    ignoreAnnotation: false
     ignoreNamedArgument: true
-    ignoreEnums: true
+    ignoreEnums: false
   MaxLineLength:
     active: true
-    maxLineLength: 150
-    excludePackageStatements: false
-    excludeImportStatements: false
+    maxLineLength: 120
+    excludePackageStatements: true
+    excludeImportStatements: true
+    excludeCommentStatements: false
+  MayBeConst:
+    active: true
   ModifierOrder:
     active: true
   NestedClassesVisibility:
     active: false
   NewLineAtEndOfFile:
     active: false
+  NoTabs:
+    active: false
   OptionalAbstractKeyword:
     active: true
-  OptionalReturnKeyword:
-    active: true
   OptionalUnit:
-    active: true
+    active: false
   OptionalWhenBraces:
     active: false
   ProtectedMemberInFinalClass:
-    active: false
+    active: true
   RedundantVisibilityModifierRule:
-    active: false
+    active: true
   ReturnCount:
     active: true
-    max: 3
+    max: 2
     excludedFunctions: "equals"
   SafeCast:
     active: true
   SerialVersionUIDInSerializableClass:
-    active: false
-  SpacingBetweenPackageAndImports:
     active: true
+  SpacingBetweenPackageAndImports:
+    active: false
   ThrowsCount:
     active: true
-    max: 3
+    max: 2
+  TrailingWhitespace:
+    active: false
   UnnecessaryAbstractClass:
     active: false
   UnnecessaryInheritance:
@@ -341,12 +456,15 @@ style:
   UntilInsteadOfRangeTo:
     active: true
   UnusedImports:
+    active: false
+  UnusedPrivateMember:
     active: true
+    allowedNames: "(_|ignored|expected)"
   UseDataClass:
-    active: true
+    active: false
     excludeAnnotatedClasses: ""
   UtilityClassWithPublicConstructor:
-    active: false
+    active: true
   WildcardImport:
     active: true
     excludeImports: 'java.util.*,kotlinx.android.synthetic.*'
