Донастроил конфиг детекта: отключил протеворечивое кодстайлу правило

--- a/tools/static-analysis/kotlin/detekt-config.yml
+++ b/tools/static-analysis/kotlin/detekt-config.yml
@@ -382,7 +382,7 @@ style:
   EqualsNullCall:
     active: true
   ExpressionBodySyntax:
-    active: true
+    active: false
   ForbiddenComment:
     active: true
     values: 'TODO:,FIXME:,STOPSHIP:'
