--- a/tools/static-analysis/kotlin/detekt-config.yml
+++ b/tools/static-analysis/kotlin/detekt-config.yml
@@ -108,13 +108,13 @@ complexity:
     excludeStringsWithLessThan5Characters: false
     ignoreStringsRegex: '$^'
   TooManyFunctions:
-    active: false
-    thresholdInFiles: 10
-    thresholdInClasses: 10
+    active: true
+    thresholdInFiles: 150
+    thresholdInClasses: 150
     thresholdInInterfaces: 10
-    thresholdInObjects: 10
-    thresholdInEnums: 10
-    ignoreDeprecated: false
+    thresholdInObjects: 150
+    thresholdInEnums: 150
+    ignoreDeprecated: true
 
 empty-blocks:
   active: true
