Отключил правило WildcardImport у detekt-a

--- a/tools/static-analysis/kotlin/detekt-config.yml
+++ b/tools/static-analysis/kotlin/detekt-config.yml
@@ -252,7 +252,7 @@ formatting:
     active: true
     autoCorrect: true
   NoWildcardImports:
-    active: true
+    active: false
     autoCorrect: true
   ParameterListWrapping:
     active: true
@@ -466,5 +466,5 @@ style:
   UtilityClassWithPublicConstructor:
     active: true
   WildcardImport:
-    active: true
+    active: false
     excludeImports: 'java.util.*,kotlinx.android.synthetic.*'
